// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostComponent should match snapshot 1`] = `
<app-post
  editableFields={[Function Array]}
  editing="false"
  fb={[Function FormBuilder]}
  form={[Function FormGroup]}
  post={[Function Object]}
  submitted="false"
>
  <div
    class="post"
  >
    <div
      class="post__content"
    >
      <h2>
        Braulio
      </h2>
      <p
        class="post__date"
      >
         Dublin - 16/05/2020 
      </p>
      <p
        class="post__text"
      >
          
      </p>
      <app-button
        class="post__edit-cta"
      >
         Edit
      </app-button>
      
    </div>
  </div>
</app-post>
`;

exports[`PostComponent should match snapshot when edit panel is open 1`] = `
<app-post
  editableFields={[Function Array]}
  editing={[Function Boolean]}
  fb={[Function FormBuilder]}
  form={[Function FormGroup]}
  post={[Function Object]}
  submitted="false"
>
  <div
    class="post"
  >
    <div
      class="post__content"
    >
      <h2>
        Braulio
      </h2>
      <p
        class="post__date"
      >
         Dublin - 16/05/2020 
      </p>
      <p
        class="post__text"
      >
          
      </p>
      <app-button
        class="post__edit-cta"
      >
         Close
      </app-button>
      
      <div
        class="post__edit"
      >
        <form
          class="ng-untouched ng-pristine ng-valid"
          novalidate=""
        >
          <div
            class="post__edit__controls"
          >
            
            <div>
              <label
                class="post__edit__label"
                for="author"
              >
                author
              </label>
              <input
                class="post__edit__input ng-untouched ng-pristine ng-valid"
                type="text"
              />
              
            </div>
            <div>
              <label
                class="post__edit__label"
                for="location"
              >
                location
              </label>
              <input
                class="post__edit__input ng-untouched ng-pristine ng-valid"
                type="text"
              />
              
            </div>
          </div>
          <app-button
            class="post__edit__cta"
          >
            Save changes
          </app-button>
        </form>
      </div>
    </div>
  </div>
</app-post>
`;
